elemental/include/neutron/elemental/type.h

/**
 * SECTION: type
 * @title: Type
 * @short_description: Type definition and declaration
 */

/**
 * NtType:
 *
 * ID of a registered type
 */
typedef uint32_t NtType;
struct _NtTypeInstance;
/**
 * NtTypeInstance:
 * @type: The type the instance was allocated for
 * @data_size: The total size of %NtTypeInstance
 * @ref_count: Number of references this instance has
 * @prev: The previous level instance this is tied to
 *
 * Instance of a type
 */
typedef struct _NtTypeInstance {
  NtType type;
  size_t data_size;
  size_t ref_count;
  struct _NtTypeInstance* prev;
} NtTypeInstance;