elemental/include/neutron/elemental/signal.h

NT_BEGIN_DECLS

typedef struct _NtSignal {
  NtTypeInstance instance;
  struct _NtSignalPrivate* priv;
} NtSignal;
typedef void (*NtSignalHandler)(NtSignal* signal, NtTypeArgument* arguments, const void* data);
/**
 * nt_signal_new:
 *
 * A new non-blocking signal
 */
NtSignal* nt_signal_new();
/**
 * nt_signal_new_locking:
 *
 * A new signal which locks every time nt_signal_emit is called
 */
NtSignal* nt_signal_new_locking();
/**
 * nt_signal_attach:
 *
 * Attaches a handler to the signal
 */
void nt_signal_attach(NtSignal* self, NtSignalHandler handler, const void* data);
/**
 * nt_signal_detach:
 *
 * Detaches handler from the signal
 */
void nt_signal_detach(NtSignal* self, NtSignalHandler handler);
/**
 * nt_signal_emit:
 *
 * Triggers signal execution
 */
void nt_signal_emit(NtSignal* self, NtTypeArgument* arguments);