elemental/lib/bindings.dart


  bool NT_IS_ERROR(
    ffi.Pointer<NtError> self,
  ) {
    return _NT_IS_ERROR(
      self,
    );
  }

  late final _NT_IS_ERRORPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtError>)>>(
          'NT_IS_ERROR');
  late final _NT_IS_ERROR =
      _NT_IS_ERRORPtr.asFunction<bool Function(ffi.Pointer<NtError>)>();

  int nt_error_get_type() {
    return _nt_error_get_type();
  }

  late final _nt_error_get_typePtr =
      _lookup<ffi.NativeFunction<NtType Function()>>('nt_error_get_type');
  late final _nt_error_get_type =
      _nt_error_get_typePtr.asFunction<int Function()>();

  /// nt_error_new_full:
  /// @file: The file the error comes from
  /// @method: The method the error comes from
  /// @line: The line in the file the error comes from
  /// @message: The error message
  /// @backtrace: The backtrace of the error
  ///
  /// Fully creates a new error, it is recommended to use %nt_error_new
  ///
  /// Returns: A new error
  ffi.Pointer<NtError> nt_error_new_full(
    ffi.Pointer<ffi.Char> file,
    ffi.Pointer<ffi.Char> method,
    int line,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<NtBacktrace> backtrace,
  ) {
    return _nt_error_new_full(
      file,
      method,
      line,
      message,
      backtrace,
    );
  }

  late final _nt_error_new_fullPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtError> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<NtBacktrace>)>>('nt_error_new_full');
  late final _nt_error_new_full = _nt_error_new_fullPtr.asFunction<
      ffi.Pointer<NtError> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<NtBacktrace>)>();

  late final ffi.Pointer<ffi.Size> _NT_LIST_SIZE =
      _lookup<ffi.Size>('NT_LIST_SIZE');

  int get NT_LIST_SIZE => _NT_LIST_SIZE.value;

  set NT_LIST_SIZE(int value) => _NT_LIST_SIZE.value = value;

  ffi.Pointer<NtList> NT_LIST(
    ffi.Pointer<NtTypeInstance> instance,
  ) {
    return _NT_LIST(
      instance,
    );
  }

  late final _NT_LISTPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtList> Function(
              ffi.Pointer<NtTypeInstance>)>>('NT_LIST');
  late final _NT_LIST = _NT_LISTPtr.asFunction<
      ffi.Pointer<NtList> Function(ffi.Pointer<NtTypeInstance>)>();

  bool NT_IS_LIST(
    ffi.Pointer<NtList> self,
  ) {
    return _NT_IS_LIST(
      self,
    );
  }

  late final _NT_IS_LISTPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtList>)>>(
          'NT_IS_LIST');
  late final _NT_IS_LIST =
      _NT_IS_LISTPtr.asFunction<bool Function(ffi.Pointer<NtList>)>();

  int nt_list_get_type() {
    return _nt_list_get_type();
  }

  late final _nt_list_get_typePtr =
      _lookup<ffi.NativeFunction<NtType Function()>>('nt_list_get_type');
  late final _nt_list_get_type =
      _nt_list_get_typePtr.asFunction<int Function()>();

  /// nt_list_alloc:
  /// @value: The value to use
  ///
  /// Allocates a new entry for a list
  ///
  /// Returns: The entry
  ffi.Pointer<NtList> nt_list_alloc(
    NtValue value,
  ) {
    return _nt_list_alloc(
      value,
    );
  }

  late final _nt_list_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<NtList> Function(NtValue)>>(
          'nt_list_alloc');
  late final _nt_list_alloc =
      _nt_list_allocPtr.asFunction<ffi.Pointer<NtList> Function(NtValue)>();

  /// nt_list_get_head:
  /// @self: The list
  ///
  /// Gets the head element of the list
  ///
  /// Returns: An element
  ffi.Pointer<NtList> nt_list_get_head(
    ffi.Pointer<NtList> self,
  ) {
    return _nt_list_get_head(
      self,
    );
  }

  late final _nt_list_get_headPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtList> Function(
              ffi.Pointer<NtList>)>>('nt_list_get_head');
  late final _nt_list_get_head = _nt_list_get_headPtr
      .asFunction<ffi.Pointer<NtList> Function(ffi.Pointer<NtList>)>();

  /// nt_list_get_tail:
  /// @self: The list
  ///
  /// Gets the tail element of the list
  ///
  /// Returns: An element
  ffi.Pointer<NtList> nt_list_get_tail(
    ffi.Pointer<NtList> self,
  ) {
    return _nt_list_get_tail(
      self,
    );
  }

  late final _nt_list_get_tailPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtList> Function(
              ffi.Pointer<NtList>)>>('nt_list_get_tail');
  late final _nt_list_get_tail = _nt_list_get_tailPtr
      .asFunction<ffi.Pointer<NtList> Function(ffi.Pointer<NtList>)>();

  /// nt_list_length:
  /// @self: The list
  ///
  /// Counts the number of elements in the list starting with @self
  /// Return: THe number of elements
  int nt_list_length(
    ffi.Pointer<NtList> self,
  ) {
    return _nt_list_length(
      self,
    );
  }

  late final _nt_list_lengthPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<NtList>)>>(
          'nt_list_length');
  late final _nt_list_length =
      _nt_list_lengthPtr.asFunction<int Function(ffi.Pointer<NtList>)>();

  /// nt_list_prepend:
  /// @self: The list to use
  /// @value: The value to prepend
  ///
  /// Prepends @value into a new entry in the list.
  /// Returns: The new head of the list.
  ffi.Pointer<NtList> nt_list_prepend(
    ffi.Pointer<NtList> self,
    NtValue value,
  ) {
    return _nt_list_prepend(
      self,
      value,
    );
  }

  late final _nt_list_prependPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtList> Function(
              ffi.Pointer<NtList>, NtValue)>>('nt_list_prepend');
  late final _nt_list_prepend = _nt_list_prependPtr
      .asFunction<ffi.Pointer<NtList> Function(ffi.Pointer<NtList>, NtValue)>();

  /// nt_list_append:
  /// @self: The list to use
  /// @value: The value to append
  ///
  /// Appends @value into a new entry in the list.
  /// Returns: The new head of the list.
  ffi.Pointer<NtList> nt_list_append(
    ffi.Pointer<NtList> self,
    NtValue value,
  ) {
    return _nt_list_append(
      self,
      value,
    );
  }

  late final _nt_list_appendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtList> Function(
              ffi.Pointer<NtList>, NtValue)>>('nt_list_append');
  late final _nt_list_append = _nt_list_appendPtr
      .asFunction<ffi.Pointer<NtList> Function(ffi.Pointer<NtList>, NtValue)>();

  late final ffi.Pointer<ffi.Size> _NT_SIGNAL_SIZE =
      _lookup<ffi.Size>('NT_SIGNAL_SIZE');

  int get NT_SIGNAL_SIZE => _NT_SIGNAL_SIZE.value;

  set NT_SIGNAL_SIZE(int value) => _NT_SIGNAL_SIZE.value = value;

  ffi.Pointer<NtSignal> NT_SIGNAL(
    ffi.Pointer<NtTypeInstance> instance,
  ) {
    return _NT_SIGNAL(
      instance,
    );
  }

  late final _NT_SIGNALPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtSignal> Function(
              ffi.Pointer<NtTypeInstance>)>>('NT_SIGNAL');
  late final _NT_SIGNAL = _NT_SIGNALPtr.asFunction<
      ffi.Pointer<NtSignal> Function(ffi.Pointer<NtTypeInstance>)>();

  bool NT_IS_SIGNAL(
    ffi.Pointer<NtSignal> self,
  ) {
    return _NT_IS_SIGNAL(
      self,
    );
  }

  late final _NT_IS_SIGNALPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtSignal>)>>(
          'NT_IS_SIGNAL');
  late final _NT_IS_SIGNAL =
      _NT_IS_SIGNALPtr.asFunction<bool Function(ffi.Pointer<NtSignal>)>();

  int nt_signal_get_type() {
    return _nt_signal_get_type();
  }

  late final _nt_signal_get_typePtr =
      _lookup<ffi.NativeFunction<NtType Function()>>('nt_signal_get_type');
  late final _nt_signal_get_type =
      _nt_signal_get_typePtr.asFunction<int Function()>();

  /// nt_signal_new:
  ///
  /// A new non-blocking signal
  ///
  /// Returns: A new %NtSignal
  ffi.Pointer<NtSignal> nt_signal_new() {
    return _nt_signal_new();
  }

  late final _nt_signal_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<NtSignal> Function()>>(
          'nt_signal_new');
  late final _nt_signal_new =
      _nt_signal_newPtr.asFunction<ffi.Pointer<NtSignal> Function()>();

  /// nt_signal_new_locking:
  ///
  /// A new signal which locks every time nt_signal_emit is called
  ///
  /// Returns: A new %NtSignal
  ffi.Pointer<NtSignal> nt_signal_new_locking() {
    return _nt_signal_new_locking();
  }

  late final _nt_signal_new_lockingPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<NtSignal> Function()>>(
          'nt_signal_new_locking');
  late final _nt_signal_new_locking =
      _nt_signal_new_lockingPtr.asFunction<ffi.Pointer<NtSignal> Function()>();

  /// nt_signal_attach:
  /// @self: The %NtSignal
  /// @handler: The handler to add
  /// @data: The data to send to @handler
  ///
  /// Attaches a handler to the signal
  ///
  /// Returns: The ID of the signal
  int nt_signal_attach(
    ffi.Pointer<NtSignal> self,
    NtSignalHandler handler,
    ffi.Pointer<ffi.Void> data,
  ) {
    return _nt_signal_attach(
      self,
      handler,
      data,
    );
  }

  late final _nt_signal_attachPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<NtSignal>, NtSignalHandler,
              ffi.Pointer<ffi.Void>)>>('nt_signal_attach');
  late final _nt_signal_attach = _nt_signal_attachPtr.asFunction<
      int Function(
          ffi.Pointer<NtSignal>, NtSignalHandler, ffi.Pointer<ffi.Void>)>();

  /// nt_signal_detach:
  /// @self: The %NtSignal
  /// @id: The signal ID
  ///
  /// Detaches @handler from the signal
  ///
  /// Returns: The data passed in %nt_signal_attach
  ffi.Pointer<ffi.Void> nt_signal_detach(
    ffi.Pointer<NtSignal> self,
    int id,
  ) {
    return _nt_signal_detach(
      self,
      id,
    );
  }

  late final _nt_signal_detachPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<NtSignal>, ffi.Int)>>('nt_signal_detach');
  late final _nt_signal_detach = _nt_signal_detachPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<NtSignal>, int)>();

  /// nt_signal_emit:
  /// @self: The %NtSignal
  /// @arguments: The arguments to send to %NtSignalHandler
  ///
  /// Triggers signal execution
  void nt_signal_emit(
    ffi.Pointer<NtSignal> self,
    ffi.Pointer<NtTypeArgument> arguments,
  ) {
    return _nt_signal_emit(
      self,
      arguments,
    );
  }

  late final _nt_signal_emitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<NtSignal>,
              ffi.Pointer<NtTypeArgument>)>>('nt_signal_emit');
  late final _nt_signal_emit = _nt_signal_emitPtr.asFunction<
      void Function(ffi.Pointer<NtSignal>, ffi.Pointer<NtTypeArgument>)>();
}

/// NtValueType:
/// @NT_VALUE_TYPE_POINTER: A pointer type
/// @NT_VALUE_TYPE_STRING: A string type
/// @NT_VALUE_TYPE_NUMBER: An integer type
/// @NT_VALUE_TYPE_BOOL: A boolean type
/// @NT_VALUE_TYPE_INSTANCE: An %NtTypeInstance type
///
/// An enum for describing what %NtValue is holding
abstract class _NtValueType {
  static const int NT_VALUE_TYPE_POINTER = 0;
  static const int NT_VALUE_TYPE_STRING = 1;
  static const int NT_VALUE_TYPE_NUMBER = 2;
  static const int NT_VALUE_TYPE_BOOL = 3;
  static const int NT_VALUE_TYPE_INSTANCE = 4;
}

/// NtTypeInstance:
/// @type: The type the instance was allocated for
/// @data_size: The total size of %NtTypeInstance
/// @ref_count: Number of references this instance has
/// @prev: The previous level instance this is tied to
///
/// Instance of a type
class _NtTypeInstance extends ffi.Struct {
  @NtType()
  external int type;

  @ffi.Size()
  external int data_size;

  @ffi.Size()
  external int ref_count;

  external ffi.Pointer<_NtTypeInstance> prev;
}

/// NtType:
///
/// ID of a registered type
typedef NtType = ffi.Uint32;
